suppression fichiers vides et corrections gap grid

--- a/css/style.css
+++ b/css/style.css
@@ -196,14 +196,8 @@ li {
 .btn-card:hover {
   box-shadow: 6px 4px 10px #a0a0a0;
 }
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  .btn-card {
-    margin: 10px;
-  }
-}
 @media screen and (min-width: 1200px) {
   .btn-card {
-    margin: 10px;
     max-height: 240px;
   }
 }
@@ -571,6 +565,7 @@ footer i {
     display: grid;
     grid-template-columns: repeat(3, 33%);
     grid-template-rows: 1fr;
+    column-gap: 10px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -578,6 +573,7 @@ footer i {
     display: grid;
     grid-template-columns: repeat(3, 33%);
     grid-template-rows: 1fr;
+    column-gap: 10px;
   }
 }
 
@@ -591,6 +587,8 @@ footer i {
     display: grid;
     grid-template-columns: 50% 50%;
     grid-template-rows: 50% 50%;
+    column-gap: 30px;
+    row-gap: 10px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -598,6 +596,7 @@ footer i {
     display: grid;
     grid-template-columns: 25% 25% 25% 25%;
     grid-template-rows: 100%;
+    column-gap: 20px;
   }
 }
 
