--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -92,11 +92,13 @@
             display: grid;
             grid-template-columns: repeat(3,33%);
             grid-template-rows: 1fr;
+            column-gap: 10px;
         }
         @include desktop {
             display: grid;
             grid-template-columns: repeat(3,33%);
             grid-template-rows: 1fr;
+            column-gap: 10px;
         }
     }
 }
@@ -110,11 +112,14 @@
             display: grid;
             grid-template-columns: 50% 50%;
             grid-template-rows: 50% 50%;
+            column-gap: 30px;
+            row-gap: 10px;
         }
         @include desktop {
             display: grid;
             grid-template-columns: 25% 25% 25% 25%;
             grid-template-rows: 100%;
+            column-gap: 20px;
         }
     }
 }
